# twist

./: .gitignore  .twistrc  CMakeLists.txt  README.md  _plot_aux.py  build.py  build.sh  twist.cpp
_autocomplete/: _twist  twist-completion.bash
benchmarks/: bench_colmat.cpp  bench_dggev.cpp  bench_dlatrn.cpp  bench_lu.cpp  bench_scalability.cpp  bench_sparsemat_growth.cpp  bench_spgemv.cpp  bench_subsystem.cpp
checks/openmp/: CMakeLists.txt
cmake/: FindFortran.cmake
example_models/: br_lca.json  fhn.json  ml.json  template.json  tp06.json
include/: collocation_matrix.h  collocator.h  continuation.h  cxxcodeprinter.h  hopf_collocator.h  libloader.h  linalg.h  numpy_like.h  postprocess.h  profiling.h  serialize.h  shared.h  sparse_matrix.h  thread_pool.h  tinyexpr.h
include/GL/: gl.h  gl1.h  gl10.h  gl11.h  gl12.h  gl13.h  gl14.h  gl15.h  gl16.h  gl2.h  gl3.h  gl4.h  gl5.h  gl6.h  gl7.h  gl8.h  gl9.h
include/_python_scripts/: _animate.py  _interim.py  _plot.py  _simviz.py  _visualize.py
include/bif_points/: branch_point.h  hopf_point.h  newton.h  torus_point.h
include/cli/: cli.h  cli_build.h  cli_common.h  cli_continuation.h  cli_import.h  cli_info.h  cli_local_continuation.h  cli_postprocess.h  cli_preprocess.h  cli_simulate.h  cli_solve.h  cli_tools.h  cli_visualize.h  colors.h  load.h  model_generation.h  run.h
include/colmat/: tcolmat.h
include/experimental/: contour.h  expander.h
include/krylov/: bicgstab.h  krylov_schur.h
include/preprocess/: drxd.h  lsoda.h  preprocess.h  roots.h
include/python/: npy_array.h  plotting.h
include/tools/: helpers.h  insert.h  refine.h
src/bifurcation/: branch_point.cpp  hopf_point.cpp  krylov_schur.cpp  newton.cpp  postprocess.cpp  saddle_node.cpp
src/cli/: cli_build.cpp  cli_continuation.cpp  cli_import.cpp  cli_info.cpp  cli_local_continuation.cpp  cli_postprocess.cpp  cli_preprocess.cpp  cli_setup.cpp  cli_simulate.cpp  cli_solve.cpp  cli_tools.cpp  cli_visualize.cpp
src/collocation/: collocator.cpp  continuation.cpp  gl.cpp
src/experimental/: contour.cpp  expander.cpp  local_cont.cpp
src/linalg/: collocation_matrix.cpp  dgeqp4.cpp  dggev4.cpp  dggev5.cpp  dtrsyl.cpp  lapack.cpp  sparse_matrix.cpp  zggev4.cpp
src/misc/: animate_script.cpp  animate_script.cpp.in  interim_script.cpp  interim_script.cpp.in  numpy_like.cpp  plot_script.cpp  plot_script.cpp.in  plotting.cpp  simviz_script.cpp  simviz_script.cpp.in  visualize_script.cpp  visualize_script.cpp.in
src/parsing/: cxxcodeprinter.cpp  libloader.cpp  load.cpp  meta_helper.cpp  model_generation.cpp  npy_array.cpp  tinyexpr.cpp
src/simulation/: drxd.cpp  iif2.cpp  preprocess.cpp
src/tools/: helpers.cpp  insert.cpp  refine.cpp
test/: roc.cpp  test_N.cpp  test_colmat.cpp  test_dggev4.cpp  test_twist.cpp
